[package]
authors = ["Dave Farnham <dave.farnham@icloud.com>", "Ian F. Diks <ian.diks@uni-saarland.de>"]
description = "A Rust port of LAS2 from SVDLIBC"
keywords = ["svd"]
categories = ["algorithms", "data-structures", "mathematics", "science"]
name = "single-svdlib"
version = "1.0.5"
edition = "2021"
license-file = "SVDLIBC-LICENSE.txt"

[features]
# simd = ["dep:simba", "single-utilities/simd"]

[dependencies]
anyhow = "1.0.97"
nalgebra-sparse = "0.10.0"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
thiserror = "2.0.9"
nshare = {version = "0.10.0", features = ["nalgebra", "ndarray"] }
ndarray = "0.16.1"
single-utilities = "0.8.0"
nalgebra = {version = "0.33.2", features = ["rayon"] }
simba = {version = "0.9.0", optional = true}
