[package]
authors = ["Dave Farnham <dave.farnham@icloud.com>", "Ian F. Diks <ian.diks@uni-saarland.de>"]
description = "A Rust port of LAS2 from SVDLIBC"
keywords = ["svd"]
categories = ["algorithms", "data-structures", "mathematics", "science"]
name = "single-svdlib"
version = "1.0.8"
edition = "2021"
license-file = "SVDLIBC-LICENSE.txt"

[features]
# simd = ["dep:simba", "single-utilities/simd"]

[dependencies]
anyhow = "1.0"
nalgebra-sparse = "0.11.0"
num-traits = "0.2.19"
rand = "0.9.0"
rand_distr = "0.5.1"
rayon = "1.10.0"
thiserror = "2.0.9"
ndarray = "0.16"
single-utilities = "0.8.7"
nalgebra = {version = "0.34", features = ["rayon"] }
